--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20010406
+ - (stevesk) logintest.c: fix for systems without __progname
+
 20010405
  - OpenBSD CVS Sync                                              
    - markus@cvs.openbsd.org 2001/04/04 09:48:35                  
