--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 20010406
  - (stevesk) logintest.c: fix for systems without __progname
+ - (stevesk) Makefile.in: log.o is in libssh.a
  - OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2001/04/05 10:00:06
      [compat.c]
