--- a/ChangeLog
+++ b/ChangeLog
@@ -25,6 +25,7 @@
    - markus@cvs.openbsd.org 2002/06/25 18:51:04
      [sshd.c]
      lightweight do_setusercontext after chroot()
+ - (bal) Updated AIX package build.  Patch by dtucker@zip.com.au
 
 20020625
  - (stevesk) [INSTALL acconfig.h configure.ac defines.h] remove --with-rsh
