--- a/ChangeLog
+++ b/ChangeLog
@@ -27,6 +27,8 @@
      lightweight do_setusercontext after chroot()
  - (bal) Updated AIX package build.  Patch by dtucker@zip.com.au
  - (tim) [Makefile.in] fix test on installing ssh-rand-helper.8
+ - (bal) added back in error check for mmap().  I screwed up, Pointed
+   out by stevesk@
 
 20020625
  - (stevesk) [INSTALL acconfig.h configure.ac defines.h] remove --with-rsh
