--- a/ChangeLog
+++ b/ChangeLog
@@ -29,6 +29,7 @@
  - (tim) [Makefile.in] fix test on installing ssh-rand-helper.8
  - (bal) added back in error check for mmap().  I screwed up, Pointed
    out by stevesk@
+ - (tim) [README.privsep] UnixWare tip no longer needed.
 
 20020625
  - (stevesk) [INSTALL acconfig.h configure.ac defines.h] remove --with-rsh
