--- a/ChangeLog
+++ b/ChangeLog
@@ -30,6 +30,8 @@
  - (bal) added back in error check for mmap().  I screwed up, Pointed
    out by stevesk@
  - (tim) [README.privsep] UnixWare tip no longer needed.
+ - (bal) fixed NeXTStep missing munmap() issue. It defines HAVE_MMAP,
+   but it all damned lies.
 
 20020625
  - (stevesk) [INSTALL acconfig.h configure.ac defines.h] remove --with-rsh
