--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20030603
+ - (djm) Replace setproctitle replacement with code derived from 
+   UCB sendmail
+
 20030602
  - (djm) Fix segv from bad reordering in auth-pam.c
  - (djm) Always use saved_argv in sshd.c as compat_init_setproctitle may 
