--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,8 @@
      VerifyReverseMapping check; with itojun@, provos@, jakob@ and deraadt@
      ok deraadt@, djm@
  - (djm) Fix portable-specific uses of verify_reverse_mapping too
+ - (djm) Sync openbsd-compat with OpenBSD CVS. 
+    - No more 4-term BSD licenses in our tree
 
 20030602
  - (djm) Fix segv from bad reordering in auth-pam.c
