--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,7 @@
  - (djm) Fix portable-specific uses of verify_reverse_mapping too
  - (djm) Sync openbsd-compat with OpenBSD CVS. 
     - No more 4-term BSD licenses in our tree
+ - (dtucker) [port-aix.c bsd-cray.c] Fix uses of verify_reverse_mapping.
 
 20030602
  - (djm) Fix segv from bad reordering in auth-pam.c
