--- a/ChangeLog
+++ b/ChangeLog
@@ -17,7 +17,7 @@
      rescinded 22 July 1999.  Proofed by myself and Theo.
  - (djm) Fix portable-specific uses of verify_reverse_mapping too
  - (djm) Sync openbsd-compat with OpenBSD CVS. 
-    - No more 4-term BSD licenses in our tree
+    - No more 4-term BSD licenses in linked code
  - (dtucker) [port-aix.c bsd-cray.c] Fix uses of verify_reverse_mapping.
 
 20030602
