--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
  - (dtucker) [configure.ac] Prevent configure --with-zlib from adding -Iyes
    and -Lyes to CFLAGS and LIBS.  Pointed out by peter at slagheap.net,
    with & ok tim@
+ - (dtucker) [configure.ac] Make configure error out if the user specifies
+   --with-libedit but the required libs can't be found, rather than silently
+   ignoring and continuing.  ok tim@
 
 20050317
  - (tim) [configure.ac] Bug 998. Make path for --with-opensc optional.
