--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20050329
+ - (dtucker) [contrib/aix/buildbff.sh] Bug #1005: Look up only the user we're
+   interested in which is much faster in large (eg LDAP or NIS) environments.
+   Patch from dleonard at vintela.com.
+
 20050321
  - (dtucker) [configure.ac] Prevent configure --with-zlib from adding -Iyes
    and -Lyes to CFLAGS and LIBS.  Pointed out by peter at slagheap.net,
