--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,7 @@
    routines, originally reported by robvdwal at sara.nl.
  - (dtucker) [ssh.c] Prevent null pointer deref in port forwarding debug
    message on some platforms.  Patch from pete at seebeyond.com via djm.
+ - (dtucker) [monitor.c] Remaining part of fix for bug #1006.
 
 20050329
  - (dtucker) [contrib/aix/buildbff.sh] Bug #1005: Look up only the user we're
