--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,8 @@
      [scp.c]
      since ssh has xstrdup, use it instead of strdup+test. unbreaks -Werror
      build
+ - (dtucker) [monitor.c] Don't free buffers in audit functions, monitor_read
+   will free as needed.  ok tim@ djm@
 
 20050331
  - (dtucker) OpenBSD CVS Sync
