--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20050405
+ - (dtucker) [configure.ac] Define HAVE_SO_PEERCRED if we have it.  ok djm@
+
 20050403
  - (djm) OpenBSD CVS Sync
    - deraadt@cvs.openbsd.org 2005/03/31 18:39:21
