--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 20050405
  - (dtucker) [configure.ac] Define HAVE_SO_PEERCRED if we have it.  ok djm@
+ - (dtucker) [auth-sia.c] Constify sys_auth_passwd, fixes build error on
+   Tru64.  Patch from cmadams at hiwaay.net.
 
 20050403
  - (djm) OpenBSD CVS Sync
