--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
  - (dtucker) [configure.ac] Define HAVE_SO_PEERCRED if we have it.  ok djm@
  - (dtucker) [auth-sia.c] Constify sys_auth_passwd, fixes build error on
    Tru64.  Patch from cmadams at hiwaay.net.
+ - (dtucker) [auth-passwd.c auth-sia.h] Remove duplicate definitions of
+   sys_auth_passwd, pointed out by cmadams at hiwaay.net.
 
 20050403
  - (djm) OpenBSD CVS Sync
