--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20050411
+ - (tim) [configure.ac] UnixWare needs PASSWD_NEEDS_USERNAME
+
 20050405
  - (dtucker) [configure.ac] Define HAVE_SO_PEERCRED if we have it.  ok djm@
  - (dtucker) [auth-sia.c] Constify sys_auth_passwd, fixes build error on
