--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20060129
+ - (dtucker) [configure.ac opensshd.init.in] Bug #1144: Use /bin/sh for the
+   opensshd.init script interpretter if /sbin/sh does not exist.  ok tim@
+
 20060120
  - (dtucker) OpenBSD CVS Sync
    - jmc@cvs.openbsd.org 2006/01/15 17:37:05
