--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,8 @@
    - jmc@cvs.openbsd.org 2006/02/01 09:11:41
      [sshd.8]
      small tweak;
+ - (djm) [contrib/caldera/openssh.spec contrib/redhat/openssh.spec]
+   [contrib/suse/openssh.spec] Update versions ahead of release
 
 20060131
  - (djm) OpenBSD CVS Sync
