--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+20060203
+ - (tim) [configure.ac] test for egrep (AC_PROG_EGREP) before first
+   AC_CHECK_HEADERS test. Without it, if AC_CHECK_HEADERS is first run
+   by a platform specific check, builtin standard includes tests will be
+   skipped on the other platforms.
+   Analysis and suggestion by vinschen at redhat.com, patch by dtucker@.
+   OK tim@, djm@.
+
 20060202
  - (dtucker) [configure.ac] Bug #1148: Fix "crippled AES" test so that it
    works with picky compilers.  Patch from alex.kiernan at thus.net.
