--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20060205
  - (tim) [configure.ac] Add AC_REVISION. Add sys/time.h to lastlog.h test
    for Solaris. OK dtucker@.
+ - (tim) [configure.ac] Bug #1149. Changes in QNX section only. Patch by
+   kraai at ftbfs.org.
 
 20060203
  - (tim) [configure.ac] test for egrep (AC_PROG_EGREP) before first
