--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20060206
+ - (tim) [configure.ac] Remove unnecessary tests for net/if.h and 
+   netinet/in_systm.h. OK dtucker@.
+
 20060205
  - (tim) [configure.ac] Add AC_REVISION. Add sys/time.h to lastlog.h test
    for Solaris. OK dtucker@.
