--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 20060212
  - (dtucker) [openbsd-compat/bsd-cygwin_util.c] Make loop counter unsigned
    to silence compiler warning, from vinschen at redhat.com.
+ - (tim) [configure.ac] Bug #1149. Disable /etc/default/login check for QNX.
 
 20060208
  - (tim) [session.c] Logout records were not updated on systems with
