--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
  - (dtucker) [openbsd-compat/bsd-cygwin_util.c] Make loop counter unsigned
    to silence compiler warning, from vinschen at redhat.com.
  - (tim) [configure.ac] Bug #1149. Disable /etc/default/login check for QNX.
+ - (dtucker) [README version.h contrib/caldera/openssh.spec
+   contrib/redhat/openssh.spec contrib/suse/openssh.spec] Bump version
+   strings to match 4.3p2 release.
 
 20060208
  - (tim) [session.c] Logout records were not updated on systems with
